2.6.0 vs. 2.5.3 

  - Configurable display in match pane
  http://sourceforge.net/support/tracker.php?aid=2960656

  Implemented requests:

  - Online team projects
  http://sourceforge.net/support/tracker.php?aid=3513384

----------------------------------------------------------------------
 OmegaT 2.5.4 update 1
----------------------------------------------------------------------
   1 Enhancement
   1 Bug fix
   1 Localisation update
----------------------------------------------------------------------
2.5.4 update 1 vs. 2.5.4

  - Windows installer: there's a new option to specify whether the 
language chosen during installation should be used for OmegaT. If
Yes, OmegaT.l4J.ini is modified to use that language.

  Bug fixes:

  - When editing project-specific file filters, the checkbox was 
labelled jCheckBox1 instead of "Enable project specific filters"

  Localisation updates:

  - Italian localisation updated to 2.5.4 (UI, readme)

----------------------------------------------------------------------
 OmegaT 2.5.4
----------------------------------------------------------------------
   6 Enhancements
   0 Bug fix
   1 Localisation update
----------------------------------------------------------------------
2.5.4 vs. 2.5.3

  Implemented requests:

  - Automatic conversion of numbers when inserting fuzzy matches
  http://sourceforge.net/support/tracker.php?aid=1381480

  Other enhancements:

  - The automatic save interval can now be set in Options > Save. 
It is defined in minutes and seconds. If a value lower than 10 seconds
is set, it is reset to 10 seconds.

  - Linux: Enhanced Kaptain script

  - Load translations from sources as default translations
  http://sourceforge.net/support/tracker.php?aid=3524017

  - The File Filters dialog can now be resized, as well as its
sub-dialogs

  - Capture variables in source filename to target mapping
has been extended with new variables for a given number of extensions